<resources>
    <string name="app_name">MobileClientConsultation</string>
    <string name="date">date</string>
    <string name="FirstName">Prenom</string>
    <string name="Cancel">Retour</string>
    <string name="Add">ajouter</string>
    <string name="Name">Name</string>
    <string name="Login">Login</string>
    <string name="Pasword">mot de passe</string>
    <string name="LoginButton">se connecter</string>
    <string name="time">heure</string>
    <string name="Update">Modifier</string>
    <string name="reason">Raison</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">deconnecter</string>
    <string name="AddPatient">Ajouter patient</string>
    <string name="AddConsult">Ajouter consult</string>
    <string name="Delete">Supprimer</string>
    <string name="NameAndFirst">Nom Prenom</string>
    <string name="dateDebut">Date début</string>
    <string name="dateFin">Date de fin</string>
    <string name="btnRechercher">Rechercher</string>
    <string name="nbrConsult">Nombre de consultations</string>

    <string name="mesMissing">champ manquant</string>
    <string name="dateFormat">Format de date ou heure invalide</string>
    <string name="success">operation a réussie</string>
    <string name="error">operation a échoué</string>
    <string name="allPatient">tous les patients</string>
    <string name="fr">fr</string>
    <string name="en">en</string>

    <string name="mesCoord">coordonnées invalide</string>

</resources>