<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/logintext"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Login" />

    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Pasword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LoginButton" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/buttonLanguageFr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fr" />

    <Button
        android:id="@+id/buttonLanguageEn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/en" />
    </LinearLayout>

</LinearLayout>