<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#F0F0F0">

        <Button

            android:id="@+id/buttonLogout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

        <Button
            android:id="@+id/buttonAddPatient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddPatient" />

        <Button
            android:id="@+id/ButtonAddConsultation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddConsult" />

    </LinearLayout>

