<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ListView
        android:id="@+id/listeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/buttonAddPatient"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/AddPatient" />

        <Button
            android:id="@+id/ButtonAddConsultation"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/AddConsult" />


    </LinearLayout>




</LinearLayout>