<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:labelFor="@id/date"
        android:text="@string/date" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time"
        android:labelFor="@id/time"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Duration"
        android:labelFor="@id/duree"/>

    <EditText
        android:id="@+id/duree"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:ems="10"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre de consultation"
        android:labelFor="@id/nombreconsecutive"/>

    <EditText
        android:id="@+id/nombreconsecutive"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:autofillHints="nombre de consultation"
        android:ems="10"
        android:inputType="number"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Add" />
    </LinearLayout>

</LinearLayout>